--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,16 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid black;
+  border: 3px solid black;
+  padding: 5px;
   margin-bottom: 20px;
+}
+
+.answer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid black;
+  padding: 5px;
+  margin: 5px;
 }
