--- a/src/index.css
+++ b/src/index.css
@@ -21,12 +21,20 @@ body {
 }
 
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   border: 3px solid black;
   padding: 5px;
   margin-bottom: 20px;
+  text-align: center;
+}
+
+.triviaTitle {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.child {
+  vertical-align: middle;
+  float: right;
 }
 
 .answer {
@@ -36,4 +44,8 @@ body {
   border: 1px solid black;
   padding: 5px;
   margin: 5px;
+}
+
+.answer:hover{
+  background-color: #d5f7dc;
 }
